--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: var(--color-background);
 }
 
 code {
@@ -15,16 +19,21 @@ code {
 :root {
   --color-background: white;
   --font-size: ;
-}
-
-body {
-  background-color: var(--color-background);
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.title-text {
+  text-align: left;
+  font-size: 0.5em;
+  margin: 2px auto 10px 2px;
 }
 
 .dd-wrapper {
@@ -39,9 +48,6 @@ body {
 
 .dd-header {
   height: 100%;
-}
-.title-text {
-  text-align: center;
 }
 
 .dd-header_title {
@@ -94,19 +100,131 @@ body {
   border: 0.1px solid black;
 }
 
-.map-holder {
+.fields-list {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-start;
+  padding: 0 0 0 0;
+  flex-wrap: wrap;
+  margin: 4px 5px 5px 5px;
+}
+
+.field-list-item {
+  text-align: center;
+  display: flex;
+  margin: 4px 0 0 8px;
+}
+
+.round-button {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border: 2px solid #f5f5f5;
+  border-radius: 50%;
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  background: #555777;
+  box-shadow: 0 0 3px gray;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.gy-holder {
+  border: 1px solid grey;
+  max-width: 96%;
   margin-top: 10px;
-  max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 77vh;
+}
+
+.map-holder {
+  margin: 1px 3px 0 3px;
+  padding: 0 0 0 0;
+  max-width: 98%;
   max-height: 40%;
+  border-bottom: 1px solid grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   /* align-items: center;
   justify-content: center; */
   z-index: -1;
 }
 
 .map-img {
-  max-height: 30vh;
-  max-width: auto;
-  align-items: center;
-  justify-content: center;
+  max-height: 37vh;
+  max-width: 97%;
   z-index: -1;
+  padding: 4px 4px 4px 4px;
+}
+
+.infobox {
+  width: 92%;
+  max-width: 92%;
+  padding: 0;
+  height: 30vh;
+  border-radius: 10px;
+  font-size: 0.7em;
+  border: 1px solid grey;
+  margin: 10px auto 10px auto;
+  display: flex;
+  background-color: #ede8e8;
+}
+
+.infobox-list1 {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.infobox-list2 {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.infobox li {
+  margin: 0.5vh 1vw 0.5vh 1vw;
+}
+
+.activity-box {
+  position: absolute;
+  bottom: 0;
+  background-color: #74ecec;
+  width: 100%;
+  height: 70px;
+  /* border-top-left-radius: 5px;
+  border-top-right-radius: 5px; */
+}
+
+.activity-holder {
+  width: 100%;
+  height: 100%;
+}
+
+.activity-list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  margin: 2px auto auto 0;
+}
+
+.activity-list-item {
+  width: 63px;
+  max-height: 63px;
+  height: 63px;
+  font-size: 0.7em;
+  /* border: 1px solid black; */
+  margin: 2px 0 2px 9px;
+  text-align: center;
+  background-color: blanchedalmond;
+  border-radius: 5px;
+  padding: 0;
 }
