--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,7 +131,7 @@ code {
 }
 
 .gy-holder {
-  border: 1px solid grey;
+  /* border: 1px solid grey;  */
   max-width: 96%;
   margin-top: 10px;
   display: flex;
@@ -157,20 +157,37 @@ code {
 
 .map-img {
   max-height: 37vh;
-  max-width: 97%;
+  max-width: 100%;
   z-index: -1;
   padding: 4px 4px 4px 4px;
 }
 
 .infobox {
-  width: 92%;
+  display: flex;
+  justify-content: space-between;
+  width: 98%;
+}
+
+.infobox-left {
+  width: 60%;
   max-width: 92%;
   padding: 0;
   height: 30vh;
   border-radius: 10px;
   font-size: 0.7em;
   border: 1px solid grey;
-  margin: 10px auto 10px auto;
+  display: flex;
+  background-color: #ede8e8;
+}
+
+.infobox-right {
+  width: 35%;
+  max-width: 92%;
+  padding: 0;
+  height: 30vh;
+  border-radius: 10px;
+  font-size: 0.7em;
+  border: 1px solid grey;
   display: flex;
   background-color: #ede8e8;
 }
@@ -180,6 +197,8 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 .infobox-list2 {
@@ -187,6 +206,8 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 .infobox li {
@@ -195,10 +216,10 @@ code {
 
 .activity-box {
   position: absolute;
-  bottom: 0;
-  background-color: #74ecec;
+  bottom: 5px;
+  background-color: white;
   width: 100%;
-  height: 70px;
+  height: 85px;
   /* border-top-left-radius: 5px;
   border-top-right-radius: 5px; */
 }
@@ -214,12 +235,13 @@ code {
   flex-direction: row;
   padding: 0;
   margin: 2px auto auto 0;
+  vertical-align: middle;
 }
 
 .activity-list-item {
   width: 63px;
-  max-height: 63px;
-  height: 63px;
+  max-height: 77px;
+  height: 77px;
   font-size: 0.7em;
   /* border: 1px solid black; */
   margin: 2px 0 2px 9px;
@@ -228,3 +250,5 @@ code {
   border-radius: 5px;
   padding: 0;
 }
+
+/* prøv uten blå på bunn, fjern rammer  */
