--- a/client/src/index.css
+++ b/client/src/index.css
@@ -218,10 +218,9 @@ code {
   position: absolute;
   bottom: 5px;
   background-color: white;
-  width: 100%;
+  width: 95%;
   height: 85px;
-  /* border-top-left-radius: 5px;
-  border-top-right-radius: 5px; */
+  margin: 0 2.5% 0 2.5%;
 }
 
 .activity-holder {
@@ -244,7 +243,7 @@ code {
   height: 77px;
   font-size: 0.7em;
   /* border: 1px solid black; */
-  margin: 2px 0 2px 9px;
+  margin: 2px 5px 2px 0;
   text-align: center;
   background-color: blanchedalmond;
   border-radius: 5px;
