--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: var(--color-background);
+  background-color: #d4dfbb;
 }
 
 code {
@@ -37,7 +37,7 @@ code {
 }
 
 .dd-wrapper {
-  background-color: #ede8e8;
+  background-color: white;
   width: 80%;
   max-width: 700px;
   height: 5vh;
@@ -75,7 +75,8 @@ code {
 }
 .dd-list {
   min-width: 100%;
-  padding: inherit;
+  padding: 0;
+  margin-top: 4px;
   border-radius: 10px;
   overflow: visible;
 
@@ -85,19 +86,18 @@ code {
 .dd-list-item {
   list-style-type: none;
   width: 100%;
+  /* margin: 1px 10% 0 10%; */
+  margin: 1px 0 0 0;
   height: 6vh;
   z-index: 9999;
+  border-radius: 5px;
 }
-
-.dd-list-item :first-child {
-  border-radius: 10px;
-}
-
 .dd-button {
   width: 100%;
   height: 100%;
   box-shadow: none;
   border: 0.1px solid black;
+  border-radius: 5px;
 }
 
 .fields-list {
@@ -106,7 +106,7 @@ code {
   justify-content: flex-start;
   padding: 0 0 0 0;
   flex-wrap: wrap;
-  margin: 4px 5px 5px 5px;
+  margin: 4px 5px 8px 0;
 }
 
 .field-list-item {
@@ -119,12 +119,12 @@ code {
   width: 30px;
   height: 30px;
   line-height: 30px;
-  border: 2px solid #f5f5f5;
+  border: 0.5px solid blanchedalmond;
   border-radius: 50%;
   color: #f5f5f5;
   text-align: center;
   text-decoration: none;
-  background: #555777;
+  background: #486a47;
   box-shadow: 0 0 3px gray;
   font-size: 20px;
   font-weight: bold;
@@ -142,10 +142,14 @@ code {
 
 .map-holder {
   margin: 1px 3px 0 3px;
-  padding: 0 0 0 0;
-  max-width: 98%;
-  max-height: 40%;
-  border-bottom: 1px solid grey;
+  padding: 0 0 4px 0;
+  min-width: 100vw;
+
+  max-width: 100vw;
+  min-height: 45%;
+  max-height: 55%;
+  background-color: #c9aa88;
+  /* border-radius: 10px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -156,40 +160,68 @@ code {
 }
 
 .map-img {
-  max-height: 37vh;
-  max-width: 100%;
+  /* max-height: 27vh; */
+  max-width: 91%;
   z-index: -1;
-  padding: 4px 4px 4px 4px;
+  padding: 0;
+  border: 1px solid grey;
+  margin: 5vh 0 2vh 0;
+  border-radius: 10px;
 }
 
 .infobox {
   display: flex;
   justify-content: space-between;
   width: 98%;
+  flex-grow: 5;
+  min-height: 22vh;
+  color: white;
+}
+
+.infobox h2 {
+  padding: 0 0 0 0;
+  margin: 0 0 0 0;
+  text-align: center;
+  font-size: 1em;
+  text-shadow: 1px solid black;
 }
 
 .infobox-left {
   width: 60%;
-  max-width: 92%;
-  padding: 0;
-  height: 30vh;
+  max-width: 60%;
   border-radius: 10px;
   font-size: 0.7em;
   border: 1px solid grey;
-  display: flex;
-  background-color: #ede8e8;
+
+  background-color: #486a47;
 }
 
 .infobox-right {
   width: 35%;
-  max-width: 92%;
+  max-width: 35%;
   padding: 0;
-  height: 30vh;
   border-radius: 10px;
   font-size: 0.7em;
   border: 1px solid grey;
+  background-color: #486a47;
+}
+
+.infobox-left-items {
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+  height: 80%;
+
   display: flex;
-  background-color: #ede8e8;
+}
+
+.infobox-right-items {
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+  height: 80%;
+
+  display: flex;
 }
 
 .infobox-list1 {
@@ -217,7 +249,6 @@ code {
 .activity-box {
   position: absolute;
   bottom: 5px;
-  background-color: white;
   width: 95%;
   height: 85px;
   margin: 0 2.5% 0 2.5%;
@@ -245,7 +276,7 @@ code {
   /* border: 1px solid black; */
   margin: 2px 5px 2px 0;
   text-align: center;
-  background-color: blanchedalmond;
+  background-color: #c9aa88;
   border-radius: 5px;
   padding: 0;
 }
