--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #d4dfbb;
+  background-color: #c9aa88;
 }
 
 code {
@@ -68,6 +68,12 @@ code {
   text-align: center;
 }
 
+.lower-half {
+  width: 100%;
+  background-color: #d4dfbb;
+  padding: 0 20px 0 20px;
+}
+
 .church {
   max-height: 85%;
   width: auto;
@@ -82,6 +88,7 @@ code {
 
   /* border: 1px solid black; */
 }
+/* #d4dfbb VIKIT */
 
 .dd-list-item {
   list-style-type: none;
@@ -252,6 +259,7 @@ code {
   width: 95%;
   height: 85px;
   margin: 0 2.5% 0 2.5%;
+  background-color: #d4dfbb;
 }
 
 .activity-holder {
