--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #c9aa88;
+  background-color: #d4dfbb;
 }
 
 code {
@@ -33,7 +33,7 @@ code {
 .title-text {
   text-align: left;
   font-size: 0.5em;
-  margin: 2px auto 10px 2px;
+  margin: 2px auto 7px 2px;
 }
 
 .dd-wrapper {
@@ -66,12 +66,6 @@ code {
   /* margin-top: 3%; */
   font-size: 1.2em;
   text-align: center;
-}
-
-.lower-half {
-  width: 100%;
-  background-color: #d4dfbb;
-  padding: 0 20px 0 20px;
 }
 
 .church {
@@ -138,9 +132,8 @@ code {
 }
 
 .gy-holder {
-  /* border: 1px solid grey;  */
-  max-width: 96%;
-  margin-top: 10px;
+  max-width: 100%;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -148,40 +141,59 @@ code {
 }
 
 .map-holder {
-  margin: 1px 3px 0 3px;
+  /* margin: 10px 1.5% 0 1.5%; */
+  margin-top: 10px;
   padding: 0 0 4px 0;
-  min-width: 100vw;
-
-  max-width: 100vw;
+  min-width: 100%;
+  border-radius: 10px;
+  max-width: 100%;
   min-height: 45%;
   max-height: 55%;
   background-color: #c9aa88;
-  /* border-radius: 10px; */
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 
-  /* align-items: center;
-  justify-content: center; */
-  z-index: -1;
+  z-index: 2;
+}
+
+.above-map {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  width: 100%;
+}
+
+.map-header {
+  text-align: left;
+  font-size: 1.1em;
+  margin: 0 0 0 4.5vw;
+  padding: 0 0 0 0;
+  color: #d4dfbb;
+  text-shadow: #654321 0px 0px 1px, #654321 0px 0px 1px, #654321 0px 0px 1px,
+    #654321 0px 0px 1px, #654321 0px 0px 1px, #654321 0px 0px 1px;
 }
 
 .map-img {
-  /* max-height: 27vh; */
-  max-width: 91%;
-  z-index: -1;
+  max-height: 35vh;
+  max-width: 92%;
+  z-index: 2;
   padding: 0;
   border: 1px solid grey;
-  margin: 5vh 0 2vh 0;
+  margin: 0.5vh 0 1.5vh 0;
   border-radius: 10px;
 }
 
 .infobox {
   display: flex;
   justify-content: space-between;
-  width: 98%;
-  flex-grow: 5;
+  width: 96%;
+  margin: 0 2% 0 2%;
+  padding: 0;
+  flex-shrink: 5;
   min-height: 22vh;
+  max-height: 25vh;
   color: white;
 }
 
@@ -198,7 +210,7 @@ code {
   max-width: 60%;
   border-radius: 10px;
   font-size: 0.7em;
-  border: 1px solid grey;
+  margin: 0;
 
   background-color: #486a47;
 }
@@ -206,10 +218,10 @@ code {
 .infobox-right {
   width: 35%;
   max-width: 35%;
+  margin: 0;
   padding: 0;
   border-radius: 10px;
   font-size: 0.7em;
-  border: 1px solid grey;
   background-color: #486a47;
 }
 
@@ -259,7 +271,6 @@ code {
   width: 95%;
   height: 85px;
   margin: 0 2.5% 0 2.5%;
-  background-color: #d4dfbb;
 }
 
 .activity-holder {
