--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,6 +68,10 @@ code {
   text-align: center;
 }
 
+.dd-header_title--bold span {
+  color: blue;
+}
+
 .church {
   max-height: 85%;
   width: auto;
@@ -138,10 +142,6 @@ code {
   flex-direction: column;
   align-items: center;
   max-height: 77vh;
-}
-
-span {
-  color: blue;
 }
 
 .map-holder {
@@ -250,6 +250,16 @@ span {
 
 .infobox li {
   margin: 0.5vh 1vw 0.5vh 1vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.infobox li p {
+  margin: 0;
+}
+
+.activity-icon {
+  max-width: 7vw;
 }
 
 .activity-box {
