--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,7 +39,9 @@ code {
 .register-activities {
   margin: 10px auto 5px 7px;
   padding: 0;
-  font-size: 0.7em;
+  letter-spacing: 0.03em;
+  font-size: 0.65em;
+  font-weight: bold;
   border: 1px solid white;
   height: 4vh;
   border-radius: 10px;
@@ -51,6 +53,10 @@ code {
 .register-activities p {
   margin-top: 5%;
   color: white;
+}
+
+.register-activities span {
+  /* font-size: 1.7em; */
 }
 
 .dd-wrapper {
@@ -79,11 +85,11 @@ code {
 }
 
 .dd-header_title--bold {
-  margin: 0.35vh 0 0 10px;
+  margin: 0.56vh 0 0 10px;
 
   padding: 0 0 0 0;
   /* margin-top: 3%; */
-  font-size: 0.9em;
+  font-size: 0.8em;
   text-align: center;
 }
 
@@ -353,12 +359,13 @@ code {
 .input-container p {
   padding: 0;
   margin: 0;
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .input-button-container {
   display: flex;
   justify-content: space-between;
+  margin: 2vh 2vw 0 2vw;
 }
 
 .extra-activities-button {
@@ -368,15 +375,15 @@ code {
   height: 5vh;
   background-color: #486a47;
   text-align: center;
-  margin: 1vh 0 0 1vw;
   color: white;
-  letter-spacing: 0.1em;
-  font-size: 0.7em;
   vertical-align: middle;
 }
 
-.extra-activities-button p {
-  margin-top: 4%;
+.extra-activities-button p,
+.back-button p {
+  margin-top: 4.5%;
+  font-size: 0.9em;
+  letter-spacing: 0.02em;
 }
 
 .back-button {
@@ -386,9 +393,8 @@ code {
   height: 5vh;
   background-color: #486a47;
   text-align: center;
-  margin: 1vh 1vw 0 0;
   color: white;
-  letter-spacing: 0.1em;
+
   vertical-align: middle;
 }
 
@@ -403,6 +409,8 @@ code {
   list-style: none;
   margin-top: 1vh;
   border: 1px solid black;
+  background-color: white;
+
   border-radius: 10px;
   height: 7vh;
   vertical-align: middle;
@@ -415,8 +423,25 @@ code {
   vertical-align: middle;
 }
 
+.input-activity-listitem div p {
+  margin-top: 0.5vh;
+}
+
 .input-img {
   max-height: 5.5vh;
   margin: 0 40% 2% 0;
   padding: 0;
+}
+
+.work-window {
+  position: fixed;
+  z-index: 999;
+  height: 40%;
+  width: 90%;
+  margin: 30% 5% 30% 5%;
+  background-color: blue;
+}
+
+.work-window-invis {
+  z-index: -999;
 }
