--- a/client/src/index.css
+++ b/client/src/index.css
@@ -503,8 +503,9 @@ code {
   flex-wrap: wrap;
 }
 
-.round-button-work {
-  width: 40px;
+.all-fields-button {
+  padding: 1px 6px 1px 6px;
+  margin: 0.7vh 1vw 0 1vw;
   height: 40px;
   line-height: 40px;
   border: 0.5px solid blanchedalmond;
@@ -543,7 +544,8 @@ code {
   color: #f5f5f5;
   text-align: center;
   text-decoration: none;
-  background: blue;
+  background: grey;
+  opacity: 80%;
   box-shadow: 0 0 3px gray;
   font-size: 20px;
   font-weight: bold;
