--- a/client/src/index.css
+++ b/client/src/index.css
@@ -520,6 +520,22 @@ code {
   font-weight: bold;
 }
 
+.all-fields-button-active {
+  padding: 1px 6px 1px 6px;
+  margin: 0.7vh 1vw 0 1vw;
+  height: 40px;
+  line-height: 40px;
+  border: 0.5px solid blanchedalmond;
+  border-radius: 50%;
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  background: #486a47;
+  box-shadow: 0 0 3px gray;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .round-button-work-active {
   width: 40px;
   height: 40px;
@@ -573,5 +589,5 @@ code {
   border-radius: 10px;
   padding: 6px;
   color: white;
-  background-color: #486a47;
+  background-color: #1167b1;
 }
