--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,14 @@
 html {
   min-height: 100%;
   overflow: hidden;
+
+  cursor: default;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 body {
@@ -17,6 +25,7 @@ body {
 
   background-color: #d4dfbb;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -571,6 +580,8 @@ code {
   font-weight: bold;
 }
 
+
+
 .round-button-work-active {
   width: 40px;
   height: 40px;
@@ -584,6 +595,7 @@ code {
   box-shadow: 0 0 3px gray;
   font-size: 20px;
   font-weight: bold;
+  
 }
 
 .round-button-work-inactive {
