--- a/client/src/index.css
+++ b/client/src/index.css
@@ -873,9 +873,16 @@ code {
 }
 
 .project-title-container {
-  border: none;
+  display: flex;
+  justify-content: space-between;
   font-size: 1.5em;
-  text-align: center;
+  text-align: left;
+}
+
+.project-visual-info {
+  margin: 0 0 0 3vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .project-descr-container p {
@@ -886,13 +893,11 @@ code {
 
 .project-description-header {
   border-bottom: 0.5px solid black;
+  font-weight: 600;
+
 }
 
 .project-description {
-  padding: 2% 3% 2% 3%;
-  margin: 0;
-  
-  border-radius: 2%;
 }
 
 .project-title-container p {
@@ -912,6 +917,7 @@ code {
 
 .comment-list-header {
   border-bottom: 0.5px solid black;
+  font-weight: 600;
 }
 
 .comment-list {
@@ -939,9 +945,9 @@ code {
   margin: 1vh 0 1vh 0;
 }
 
-.comment-input-container div {
-  height: 6vh;
-  line-height: 5.5vh;
+.add-comment-button {
+  height: 38px;
+  vertical-align: middle;
   width: 15%;
   border: 1px solid rgb(118, 118, 118);
   border-left: 0;
@@ -949,13 +955,23 @@ code {
   font-size: 2.5em;
   background-color: #486a47;
   color: white;
+  display: none;
+}
+
+.show {
+  display: block;
 }
 
 .comment-textarea {
   width: 80%;
-  height: 6vh;
+  height: 38px;
   resize: none;
   padding: 0;
   border-radius: 0;
+}
+
+.comment-textarea:focus {
+  border-radius: 0;
+  outline: none;
 }
 
