--- a/client/src/index.css
+++ b/client/src/index.css
@@ -975,3 +975,42 @@ code {
   outline: none;
 }
 
+.project-prio-visual {
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  border: 0.5px solid #d4dfbb;
+  border-radius: 50%;
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  background: #486a47;
+  box-shadow: 0 0 3px gray;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.progress-container {
+  display: flex;
+  width: 100%;
+  height: 4vh;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+.progress {
+  background-color: #d8d8d8;
+  border-radius: 20px;
+  width: 50%;
+
+}
+
+.progress-done {
+  opacity: 1;
+  border-radius: 20px;
+  background-color: #486a47;
+  color: white;
+  text-align: center;
+}
+
