--- a/client/src/index.css
+++ b/client/src/index.css
@@ -892,7 +892,6 @@ code {
 }
 
 .project-description-header {
-  border-bottom: 0.5px solid black;
   font-weight: 600;
 
 }
@@ -908,6 +907,7 @@ code {
 .comment-list-container {
   width: 89%;
   margin: 2% 5% 1% 5%;
+  
 }
 
 .comment-list-container p {
@@ -923,8 +923,11 @@ code {
 .comment-list {
   width: 100%;
   margin: 0;
+  margin-top: 2px;
   padding: 0;
   list-style-type: none;
+  max-height: 30vh;
+  overflow-y: auto;
 }
 
 .comment-list li {
