--- a/client/src/index.css
+++ b/client/src/index.css
@@ -526,13 +526,17 @@ code {
     border: 1px solid black;
 }
 
+.work-window-img-and-fields {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
 .work-window-header {
     font-size: 2vh;
     display: flex;
     justify-content: space-between;
     font-weight: 700;
     width: 95%;
-    max-width: 600px;
     height: 8vh;
     margin: 0 auto;
     vertical-align: middle;
@@ -554,7 +558,6 @@ code {
 
 .work-window-img-holder {
     width: 95%;
-    max-width: 600px;
     background-color: #c9aa88;
     margin: 0 auto;
     margin-top: 0.5vh;
@@ -575,7 +578,6 @@ code {
 
 .work-window-field-container {
     width: 95%;
-    max-width: 600px;
     margin: 0 auto;
 }
 
@@ -703,7 +705,7 @@ code {
 .date-selection-box h2 {
     margin: 0;
     padding: 0;
-    font-size: 1em;
+    font-size: 0.9em;
 }
 
 .date-finished-container {
@@ -718,7 +720,7 @@ code {
     border: 1px solid black;
     margin: 0 auto;
     font-weight: 700;
-    font-size: 2.5vh;
+    font-size: 2.2vh;
     margin-top: 1vh;
 }
 
@@ -774,15 +776,15 @@ code {
 }
 
 .project-container {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     z-index: 999;
-    height: 90%;
+    height: 80vh;
     width: 88%;
-    margin: 2% 5.5% 2% 5.5%;
+    margin: 10% 5.5% 2% 5.5%;
     background-color: #d4dfbb;
     border-radius: 10px;
     border: 1px solid black;
@@ -800,15 +802,14 @@ code {
 }
 
 .project-title-form {
-    /* background-color: white; */
-    /* height: 8vh; */
+    width: 100%;
     margin-top: 1vh;
 }
 
 .project-title-form-in {
     margin: 0 auto;
     height: 8vh;
-    width: 100%;
+    width: 98%;
 }
 
 .project-body {
@@ -827,7 +828,7 @@ code {
 .project-body-form-in {
     margin: 0 auto;
     margin-top: 1vh;
-    width: 100%;
+    width: 98%;
     height: 14vh;
 }
 
@@ -985,7 +986,7 @@ code {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     margin: 1vh 0 1vh 0;
 }
 
@@ -997,6 +998,7 @@ code {
     border-left: 0;
     text-align: center;
     font-size: 2.5em;
+    line-height: 100%;
     background-color: #486a47;
     color: white;
     display: none;
@@ -1053,7 +1055,7 @@ code {
 .progress-done {
     opacity: 1;
     border-radius: 20px;
-    background-color: #486a47;
+    background: linear-gradient(to right, #d4dfbb, #486a47);
     color: white;
     font-weight: 500;
     text-align: center;
