--- a/client/src/index.css
+++ b/client/src/index.css
@@ -390,6 +390,9 @@ code {
 
 .input-body {
     height: 100%;
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
 .input-container {
@@ -400,6 +403,9 @@ code {
 .input-body-dimmed {
     background-color: black;
     opacity: 100%;
+    width: 100%;
+    height: 100%;
+    max-width: 600px;
 }
 
 .input-container p {
@@ -518,9 +524,12 @@ code {
     flex-direction: column;
     justify-content: space-between;
     z-index: 999;
+    right: 5%;
+    left: 5%;
+    top: 10%;
     height: 80vh;
-    width: 88%;
-    margin: 2% 5.5% 2% 5.5%;
+    width: 90vw;
+
     background-color: #d4dfbb;
     border-radius: 10px;
     border: 1px solid black;
@@ -742,13 +751,9 @@ code {
 
 .work-window-footer {
     display: flex;
-    width: 100%;
-    max-width: 600px;
     justify-content: space-between;
     font-weight: 500;
-    margin: 0 auto;
-
-    margin-top: 3vh;
+    margin: auto 5% 5% 5%;
     letter-spacing: 0.03em;
     /* vertical-align: middle; */
 }
@@ -756,7 +761,7 @@ code {
 .work-window-cancel {
     border: 0.5px solid black;
     border-radius: 10px;
-    padding: 6px;
+    padding: 9px;
     background-color: #e0474c;
     color: black;
 }
@@ -764,7 +769,7 @@ code {
 .work-window-register {
     border: 0.5px solid black;
     border-radius: 10px;
-    padding: 6px;
+    padding: 9px;
     color: white;
     background-color: #1167b1;
 }
@@ -782,9 +787,11 @@ code {
     justify-content: space-between;
     align-items: center;
     z-index: 999;
-    height: 80vh;
-    width: 88%;
-    margin: 10% 5.5% 2% 5.5%;
+    height: 70vh;
+    right: 5%;
+    left: 5%;
+    top: 10%;
+    width: 90vw;
     background-color: #d4dfbb;
     border-radius: 10px;
     border: 1px solid black;
@@ -799,6 +806,7 @@ code {
     width: 100%;
     margin: 0 auto;
     margin-top: 2vh;
+    width: 86vw;
 }
 
 .project-title-form {
@@ -833,6 +841,7 @@ code {
 }
 
 .priority-buttons {
+    max-width: 300px;
     margin-top: 2vh;
 }
 
@@ -871,7 +880,7 @@ code {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 80%;
+    width: 90%;
     font-size: 1.5em;
     margin-bottom: 5vh;
 }
@@ -879,7 +888,7 @@ code {
 .project-cancel-button {
     border: 0.5px solid black;
     border-radius: 10px;
-    padding: 10px;
+    padding: 9px;
     background-color: #e0474c;
     color: black;
 }
@@ -887,7 +896,7 @@ code {
 .project-register-button {
     border: 0.5px solid black;
     border-radius: 10px;
-    padding: 10px;
+    padding: 9px;
     color: white;
     background-color: #1167b1;
 }
@@ -1059,5 +1068,6 @@ code {
     color: white;
     font-weight: 500;
     text-align: center;
+    line-height: 150%;
     height: 3vh;
 }
