added interactive progress bar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1008,7 +1008,7 @@ code {
     border-left: 0;
     text-align: center;
     font-size: 2.5em;
-    line-height: 100%;
+    line-height: 38px;
     background-color: #486a47;
     color: white;
     display: none;
