--- a/client/src/index.css
+++ b/client/src/index.css
@@ -757,19 +757,20 @@ code {
 }
 
 .work-window-cancel {
-  border: 0.5px solid black;
   border-radius: 10px;
   padding: 9px;
-  background-color: #e0474c;
-  color: black;
+  border: 0.5px solid #ff5252;
+  background: linear-gradient(to bottom, #ffbaba, #ff5252, #ffbaba);
+
+  color: white;
 }
 
 .work-window-register {
-  border: 0.5px solid black;
+  border: 0.5px solid #005b96;
   border-radius: 10px;
   padding: 9px;
   color: white;
-  background-color: #1167b1;
+  background: linear-gradient(to bottom, #b3cde0, #005b96, #b3cde0);
 }
 
 .right-arrow,
@@ -884,19 +885,19 @@ code {
 }
 
 .project-cancel-button {
-  border: 0.5px solid black;
   border-radius: 10px;
   padding: 9px;
-  background-color: #e0474c;
-  color: black;
+  border: 0.5px solid #ff5252;
+  background: linear-gradient(to bottom, #ffbaba, #ff5252, #ffbaba);
+  color: white;
 }
 
 .project-register-button {
-  border: 0.5px solid black;
+  border: 0.5px solid #005b96;
   border-radius: 10px;
   padding: 9px;
   color: white;
-  background-color: #1167b1;
+  background: linear-gradient(to bottom, #b3cde0, #005b96, #b3cde0);
 }
 
 .project-info-container {
@@ -910,7 +911,7 @@ code {
   width: 95.5%;
   min-height: 40vh;
   margin: 2vh 0 2vh -2px;
-  background-color: #fcf9f5; /*f2f2f2*/
+  background: linear-gradient(to bottom, #ffffff, #d4dfbb);
   border-radius: 10px;
   border: 1px solid black;
   font-size: 0.8em;
@@ -1004,12 +1005,12 @@ code {
   height: 38px;
   vertical-align: middle;
   width: 15%;
-  border: 1px solid rgb(118, 118, 118);
+  border: 1px solid #006a4e;
   border-left: 0;
   text-align: center;
   font-size: 2.5em;
   line-height: 38px;
-  background-color: #486a47;
+  background: linear-gradient(to bottom, #8abaae, #006a4e, #8abaae);
   color: white;
   display: none;
 }
@@ -1078,13 +1079,12 @@ code {
   width: 30px;
   border-radius: 30px;
   border: 0.5px solid #ff5252;
-
+  background: linear-gradient(to bottom, #ffbaba, #ff5252, #ffbaba);
   font-size: 1.7em;
   margin-left: 3vw;
   line-height: 30px;
   text-align: center;
   color: white;
-  background: linear-gradient(to bottom, #ffbaba, #ff5252, #ffbaba);
 
   display: none;
 }
